--- a/atividade-07-indentacao/index.html
+++ b/atividade-07-indentacao/index.html
@@ -12,7 +12,7 @@
             <li>Primeiro item</li>
             <li>Segundo item</li>
         </ul>
-    <img src="imagem.jpg" alt="Imagem Exemplo">
+    <img src="HTML.png" alt="Imagem Exemplo">
     <a href="https://www.w3schools.com">Site para estudar HTML</a>
     <h2>Seção</h2>
     <p>Texto da seção</p>
