--- a/desafio-css-externo/index.html
+++ b/desafio-css-externo/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="widht=device-widht, initial scale=1.0">
-        <title> Estilos Externos - Terceiro Desafio </title>
-    </head>
-    <body>
-        <link rel="stylesheet" href="styles.css">
-        <h1>Bem-vindo ao meu blog!</h1>
-        <p>
-            Este é um exemplo simples de aplicação de
-            <strong>estilos Externos</strong>
-            em CSS
-        </p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estilos Externos - Terceiro Desafio</title>
+    <link rel="stylesheet" href="style.css"> 
+</head>
+<body>
+    <h1>Bem-vindo ao meu blog!</h1>
+    <p>
+        Este é um exemplo simples de aplicação de
+        <strong>estilos Externos</strong>
+        em CSS.
+    </p>
+</body>
 </html>
